Changed background colour to normal background colour

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>westshae.com</title>
   </head>
-  <body>
+  <body style="background-color:#272C3D">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
